fixed overflow

--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -2,6 +2,8 @@
   display: grid;
   /*                    1  2   3  4   5  6  7  8  9  10*/
   grid-template: auto / 5% 5% 35% 5% 30% 5% 5% 5% 5%;
+  grid-auto-rows: 50px;
+  align-items: center;
   padding: 1em;
   max-width: 800px;
   margin: 0 auto;
@@ -77,21 +79,24 @@
 }
 
 .ShoppingListItem {
+  padding: 0 0.5em;
+  height: 40px;
   font-size: 1rem;
   border: none;
   outline: none;
   cursor: pointer;
   text-align: left;
-  padding: 0.5em 0;
   margin-bottom: 5px;
   background-color: var(--fadedBack);
   font-family: var(--secondaryFonts);
+  overflow: scroll;
 }
 
 .ShoppingListItem-buttons {
   display: inline-flex;
   flex-flow: row nowrap;
   align-items: center;
+  padding: 0;
 }
 
 .ShoppingListItem-buttons a {
